corrected nav spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@ h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 2rem;
-
+  padding-right: 100px;
 }
 
 .nav-item
